changed color scheme

--- a/src/pages/add-notice/add-notice.html
+++ b/src/pages/add-notice/add-notice.html
@@ -21,12 +21,12 @@
 <ion-content>
 
   <ion-item padding-right>
-    <ion-label color="primary" stacked>Title</ion-label>
-    <ion-input #title type="text" placeholder="Enter notice title"></ion-input>
+    <ion-label color="primary" floating>Title</ion-label>
+    <ion-input #title type="text"></ion-input>
   </ion-item>
   <ion-item padding-right>
-    <ion-label color="primary" stacked>Description</ion-label>
-    <ion-textarea #desc rows="10" placeholder="Enter notice description"></ion-textarea>
+    <ion-label color="primary" floating>Description</ion-label>
+    <ion-textarea #desc rows="10"></ion-textarea>
   </ion-item>
 
   <div padding>
