added color to main-page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,14 +6,14 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content style="background: #E3E9EC">
 
 
   <ion-grid showWhen="core" style="padding: 20px 10%">
 
-    <ion-row padding style="background: #EEEEEE; height: 85vh;">
+    <ion-row no-padding style="background: #CFC7B8; height: 85vh;">
 
-      <ion-col width-33>
+      <ion-col no-padding width-33>
 
         <ion-list style="height: 100%; overflow: scroll; overflow-x: hidden">
           <button ion-item *ngFor="let i of items">
