--- a/src/pages/add-notice/add-notice.html
+++ b/src/pages/add-notice/add-notice.html
@@ -18,14 +18,14 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content padding-top class="no-scroll">
 
   <ion-item padding-right>
-    <ion-label color="primary" floating>Title</ion-label>
+    <ion-label color="primary" stacked>Title</ion-label>
     <ion-input #title type="text"></ion-input>
   </ion-item>
   <ion-item padding-right>
-    <ion-label color="primary" floating>Description</ion-label>
+    <ion-label color="primary" stacked>Description</ion-label>
     <ion-textarea #desc rows="10"></ion-textarea>
   </ion-item>
 
