--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,10 +3,15 @@
     <ion-title>
       SPAN
     </ion-title>
+    <ion-buttons start>
+      <button ion-button icon-only (click)="presentPopover($event)">
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content style="background: #E3E9EC">
+<ion-content>
 
   <p showWhen="cordova" padding style="-webkit-user-select: auto;">Token: {{ token }}</p>
 
