token saving - added server side token saving

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
 
 <ion-content>
 
-  <p showWhen="cordova" padding style="-webkit-user-select: auto;">Token: {{ token }}</p>
+  <!--p showWhen="cordova" padding style="-webkit-user-select: auto;">Token: {{ token }}</p-->
 
   <ion-grid showWhen="core" style="padding: 20px 10%">
 
