--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title padding>Registeration</ion-title>
+    <ion-title padding>Registration</ion-title>
     <ion-buttons end padding-right>
       <button ion-button icon-only (click)="close()">
         <ion-icon name="close"></ion-icon>
