added forgot password page

--- a/src/pages/login-page/login-page.html
+++ b/src/pages/login-page/login-page.html
@@ -41,7 +41,7 @@
 
       <button ion-button block large (click)="login(email.value, pass.value)">Sign in</button>
 
-      <button ion-button color="primary" clear>Forgot your password?</button>
+      <button ion-button color="primary" (click)="recover()" clear>Forgot your password?</button>
 
     </div>
 
