--- a/src/pages/notice-details/notice-details.html
+++ b/src/pages/notice-details/notice-details.html
@@ -7,7 +7,12 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>notice-details</ion-title>
+    <ion-title>{{ notice?.title }}</ion-title>
+    <ion-buttons start padding-right>
+      <button ion-button icon-only (click)="share()">
+        <ion-icon name="share"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
