--- a/src/pages/notice-details/notice-details.html
+++ b/src/pages/notice-details/notice-details.html
@@ -7,10 +7,13 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>{{ notice?.title }}</ion-title>
-    <ion-buttons start padding-right>
+    <ion-title>{{ notice?.notice.title }}</ion-title>
+    <ion-buttons start>
       <button ion-button icon-only (click)="share()">
         <ion-icon name="share"></ion-icon>
+      </button>
+      <button ion-button icon-only *ngIf="user?.uid == notice?.notice?.createdBy?.uid" (click)="delete()">
+       <ion-icon name="trash"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
@@ -18,8 +21,8 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
 
-  <pre>{{ notice | json }}</pre>
+  <notice [notice]="notice"></notice>
 
 </ion-content>
