--- a/src/pages/add-notice/add-notice.html
+++ b/src/pages/add-notice/add-notice.html
@@ -52,7 +52,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar padding-left padding-right color="primary-dark">
+  <ion-toolbar color="primary-dark">
     <ion-title>{{ sendText }}</ion-title>
     <ion-buttons end>
       <button ion-button icon-right (click)="create(title.value, desc.value)">
