--- a/src/pages/notice-share/notice-share.html
+++ b/src/pages/notice-share/notice-share.html
@@ -13,6 +13,11 @@
         <ion-icon style="font-size: 1.66em;" name="arrow-back"></ion-icon>
       </button>
     </ion-buttons>
+    <ion-buttons right padding-left>
+      <button ion-button (click)="done()">
+        <ion-icon style="font-size: 1.66em;" name="checkmark"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
