--- a/src/pages/login-page/login-page.html
+++ b/src/pages/login-page/login-page.html
@@ -21,7 +21,7 @@
   </ion-fab>
 
 
-  <div style="margin-top: 90px;margin-right: 16px;">
+  <div class="form-container">
 
     <ion-item>
       <ion-label color="primary">
