--- a/src/pages/notice-share/notice-share.html
+++ b/src/pages/notice-share/notice-share.html
@@ -27,7 +27,10 @@
 
   <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   <ion-item-group *ngFor="let user of users; let i = index;">
-    <ion-item-divider color="light" *ngIf="user.list.length > 0">{{ user.role }}</ion-item-divider>
+    <ion-item-divider color="light" *ngIf="user.list.length > 0">
+      <ion-label>{{ user.role }}</ion-label>
+      <ion-checkbox color="secondary" [(ngModel)]="user.isChecked" (click)="checkAll(i, user.isChecked)"></ion-checkbox>
+    </ion-item-divider>
     <ion-item *ngFor="let u of user.list">
       <ion-label>
         <h2>{{ u.val.name }}</h2>
