changes data structure

--- a/src/pages/login-page/login-page.html
+++ b/src/pages/login-page/login-page.html
@@ -16,9 +16,9 @@
 
 <ion-content class="no-scroll">
 
-  <ion-fab top right edge>
+  <!--ion-fab top right edge>
     <button ion-fab color="secondary" (click)="register()"><ion-icon name="add"></ion-icon></button>
-  </ion-fab>
+  </ion-fab-->
 
 
   <div class="form-container">
